2024-10-30  Per Abrahamsen  <pa@plen.ku.dk>

	* include/daisy/soil/soil.h: 
	* src/daisy/soil/soil.C (Soil::texture_fractile): New function.


	* include/daisy/soil/texture.h: 
	* src/daisy/soil/texture.C (Texture::fractile): New function.

	* src/daisy/chemicals/adsorption.h:
	* src/daisy/chemicals/adsorption.C (AdsorptionLinear): Removed.
	* src/daisy/chemicals/adsorption_linear.C (AdsorptionLinearOld):
	Renamed to AdsorptionLinear.

2024-10-22  Per Abrahamsen  <pa@plen.ku.dk>

	* src/util/function_Python.C: Better error messages.

2024-10-21  Per Abrahamsen  <pa@plen.ku.dk>

	* src/util/function_Python.C: New function model.

2024-10-18  Per Abrahamsen  <pa@plen.ku.dk>

	* src/object_model/parameter_types/number_apply.C: New model.
	* src/object_model/toplevel.C (Toplevel::run): Start python.

2024-10-07  Per Abrahamsen  <pa@plen.ku.dk>

	* src/daisy/crop/root/rootdens_local.C
	(RootdensLocal::internal_growth): Handle I_tot == 0.

2024-09-18  Per Abrahamsen  <pa@plen.ku.dk>

	* src/daisy/crop/production.C (ExfoliationFac): Fix unit.

2024-06-20  Per Abrahamsen  <pa@plen.ku.dk>

	* src/daisy/upper_boundary/bioclimate/svat_ssoc.C
	(SVAT_SSOC::calculate_conductances): Fix argument order (reported
	by Delhez Laura <Laura.Delhez@uliege.be>).

2024-05-01  Per Abrahamsen  <pa@plen.ku.dk>

	* test/dai-unit-tests/CMakeLists.txt: Change 'dai_file' to 'name'
	* src/object_model/oldunits.C (Oldunits::standard_conversions):
	Change "CO_2" to "CO2".

2024-03-20  Per Abrahamsen  <pa@plen.ku.dk>

	* Version 6.47 released.

2024-03-20  Per Abrahamsen  <pa@plen.ku.dk>

	* adsorption_vS_S.C (vS_S_old): Renamed from "vS_S".
	(vS_S): Made S_planar, S_edge, K_planar, K_edge parameters.
	V_planar, V_edge: unit should per volume space, not per volume soil.
	(vS_S_Hansen): Old parameters.
	(vS_S_Styczen): New parameters.

2024-03-18  Per Abrahamsen  <pa@plen.ku.dk>

	* Version 6.46 released.

2024-03-18  Per Abrahamsen  <pa@plen.ku.dk>

	* parser_file.C (erase): New top level keyword.
